[FIX] Scope of .module max-width was too wide, making some modules too narrow.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/13.x@51794 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/less/tiki-boxes_and_panels.less
+++ b/styles/layout/less/tiki-boxes_and_panels.less
@@ -16,8 +16,8 @@
   }
   #col1.col-md-8 > .module,
   #col1.col-md-9 > .module,
-  #col1.col-md-8 .wikitext .module,
-  #col1.col-md-9 .wikitext .module {
+  #col1.col-md-8 .wikitext > .module,
+  #col1.col-md-9 .wikitext > .module {
     max-width: 50%;
   }
   #col1.col-md-12 > .module,
